# cookiecutter-hypermodern-python

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .python-version  .readthedocs.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  Dockerfile  LICENSE  LICENSE.rst  README.md  README.rst  action.yml  cookiecutter.json  noxfile.py  pyproject.toml  renovate.json
.dependabot/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: automerge.yml  constraints.txt  dependabot.yml  dependabot.ymlold  docs.yml  labeler.yml  pre-commit.yml  release-drafter.yml  reset-instance.yml  tests.yml  update-instance.yml
docs/: codeofconduct.rst  conf.py  contributing.md  contributing.rst  guide.md  guide.rst  index.md  index.rst  quickstart.md  quickstart.rst  requirements.txt
docs/_static/: custom.css
hooks/: post_gen_project.py
hypermodern-python/: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
hypermodern-python/.github/workflows/: coverage.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
hypermodern-python/docs/: conf.py  index.rst
hypermodern-python/docs/_static/: custom.css
hypermodern-python/tests/: __init__.py  test_console.py  test_wikipedia.py
tools/: dependencies-table.py  prepare-github-release.py  publish-github-release.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  SECURITY.md  codecov.yml  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE.md {%- endif %}  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE.rst {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE.md {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE.rst {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE.md {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE.rst {%- endif %}
{{cookiecutter.project_name}}/.dependabot/: config.yml
{{cookiecutter.project_name}}/.github/: dependabot.yml  labels.yml  release-drafter.yml
{{cookiecutter.project_name}}/.github/workflows/: automerge.yml  constraints.txt  coverage.yml  dependabot.yml  docs.yml  labeler.yml  pre-commit.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml  update-template.yaml
{{cookiecutter.project_name}}/docs/: codeofconduct.md  conf.py  contributing.md  gen_ref_pages.py  index.md  index.rst  license.md  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
{{cookiecutter.project_name}}/src/hypermodern_python/: __init__.py  console.py  wikipedia.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  console.py  wikipedia.py
{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py  test_console.py  test_main.py  test_wikipedia.py  test_{{cookiecutter.package_name}}.py
