[metadata]
description = {{ cookiecutter.short_description or cookiecutter.friendly_name }}
name = {{ cookiecutter.project_name }}
long_description = file: README.rst
long_description_content_type = text/x-rst
license = {{ cookiecutter.license }}
license_file = LICENSE
url = https://github.com/{{cookiecutter.github_user}}/{{ cookiecutter.project_name }}
platforms=any
authors = {{ cookiecutter.author }}
maintainer_email = {{ cookiecutter.email }}
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    {{cookiecutter.development_status}}

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=

[options.extras_require]
docs =
    mkdocs==1.3.0
    mkdocs-gen-files==0.3.4
    mkdocs-material==8.3.6
    mkdocs-section-index==0.3.4
    mkdocstrings-python==0.7.1

tests =
    pytest==7.1.2
    pytest-sugar==0.9.4
    pytest-cov==3.0.0
    pytest-mock==3.7.0
    pylint==2.14.3
    mypy==0.961
dev =
    %(tests)s
    %(docs)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
